--- a/templates/_template.html.twig
+++ b/templates/_template.html.twig
@@ -16,9 +16,13 @@
         </div>
         <div id="navbarBasicExample" class="navbar-menu">
             <div class="navbar-start">
-                <a class="navbar-item" href="{{ path('artist_list') }}">
-                    Artistes
-                </a>
+
+                {% if is_granted("ROLE_USER") %}
+                    <a class="navbar-item" href="{{ path('artist_list') }}">
+                        Artistes
+                    </a>
+                {% endif %}
+
                 <a class="navbar-item" href="{{ path('ranking_news') }}">
                     Nouveautés
                 </a>
@@ -29,10 +33,22 @@
                         <a class="button is-primary is-small" href="#">
                             <strong>Inscription</strong>
                         </a>
-                        <a class="button is-light is-small" href="{{ url('app_login') }}">
-                            Connexion
-                        </a>
+
+                            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                                <a class="button is-light is-small" href="{{ url('app_logout') }}">
+                                    Déconnexion
+                                </a>
+
+                                <p>{{ app.user.pseudo }}</p>
+
+                            {% else %}
+
+                                <a class="button is-light is-small" href="{{ url('app_login') }}">
+                                    Connexion
+                                </a>
+                            {% endif %}
                     </div>
+
                 </div>
                 <a class="navbar-item">
                     <form action="#">
